@@ -83,6 +83,8 @@ abstract class CoreInstaller extends Installer {
 		'_Extensions' => array(),
 		'_MemCachedServers' => '',
 		'_ExternalHTTP' => false,
+		'_LocalSettingsLocked' => true,
+		'_UpgradeKey' => '',
 	);
 
 	/**
